Правки Добавил сборщик на parceljs, добавил правильные разрешения шрифтов, разнес css на модули но это требудет доработки, также поправил немного верстку

--- a/index.html
+++ b/index.html
@@ -1,142 +1,142 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="fonts/montserrat.css">
-    <title>Турниры Call of Duty WARZONE</title>
-    <meta name="description"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="./scss/main.scss">
+  <title>Турниры Call of Duty WARZONE</title>
+  <meta name="description"
         content="Еженедельные турниры по игре Call of Duty WARZONE с призовым фондом в режиме королевской битвы!">
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
-            (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () {
+        (m[i].a = m[i].a || []).push(arguments)
+      };
+      m[i].l = 1 * new Date();
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+    })
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-        ym(73505626, "init", {
-            clickmap: true,
-            trackLinks: true,
-            accurateTrackBounce: true
-        });
-    </script>
-    <noscript>
-        <div><img src="https://mc.yandex.ru/watch/73505626" style="position:absolute; left:-9999px;" alt="" /></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
+    ym(73505626, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true
+    });
+  </script>
+  <noscript>
+    <div><img src="https://mc.yandex.ru/watch/73505626" style="position:absolute; left:-9999px;" alt=""/></div>
+  </noscript>
+  <!-- /Yandex.Metrika counter -->
 </head>
 
 <body>
-    <div class="first_block">
-        <div class="logo">
-            <img src="img/logo.png" alt="Логотип">
-        </div>
-        <div class="title_block">
-            <h1>ТУРНИРЫ ПО ИГРЕ COD WARZONE</h1>
-            <p class="title_desc">ЗАРАБАТЫВАЙ ИГРАЯ</p>
-            <div class="button">
-                <img class="button_he" src="img/he.png" alt="HE">
-                <img class="button_bullet" src="img/bullet.png" alt="bullet">
-                <form action="https://discord.gg/V3HRUUsyYn" method="get" target="_blank">
-                    <button type="submit" class="title_button">УЧАСТВОВАТЬ!</button>
-                </form>
-            </div>
-        </div>
-        <img class="smoke" src="img/smoke.png" alt="smoke">
+  <section class="first_block">
+    <div class="logo">
+      <img src="img/logo.png" alt="Логотип Warzone">
     </div>
-    <div class="second_block">
-        <div class="second_title_block">
-            <h2 class="second_title">ОПИСАНИЕ ТУРНИРОВ, КАК ОНИ ПРОВОДЯТСЯ</h2>
-            <p class="second_desc">Еженедельно проводим турниры с призовым фондом в режиме королевской битвы</p>
-        </div>
-        <div class="icon-list">
-            <div class="type-icon">
-                <img src="img/111icon.png" alt="soloicon">
-                <p>SOLO</p>
-            </div>
-            <div class="type-icon">
-                <img src="img/222icon.png" alt="soloicon">
-                <p>DUO</p>
-            </div>
-            <div class="type-icon">
-                <img src="img/333icon.png" alt="soloicon">
-                <p>TRIO</p>
-            </div>
-            <div class="type-icon">
-                <img src="img/444icon.png" alt="soloicon">
-                <p>SQUAD</p>
-            </div>
-        </div>
+    <div class="title_block">
+      <h1>ТУРНИРЫ ПО ИГРЕ COD WARZONE</h1>
+      <p class="title_desc">ЗАРАБАТЫВАЙ ИГРАЯ</p>
+      <div class="button">
+        <img class="button_he" src="img/he.png" alt="HE">
+        <img class="button_bullet" src="img/bullet.png" alt="bullet">
+        <a href="https://discord.gg/V3HRUUsyYn" target="_blank" class="title_button" rel="noopener noreferrer">УЧАСТВОВАТЬ!</a>
+      </div>
     </div>
-    <div class="third_block">
-        <div class="third_title_block">
-            <h2 class="third_title">УСЛОВИЯ УЧАСТИЯ В ТУРНИРАХ</h2>
-        </div>
-        <div class="rules-list">
-            <div class="rule">
-                <img src="img/1rule.png" alt="1rule">
-                <div class="rule-title">Наличие статистики у аккаунта и не менее 100 lvl</div>
-                <div class="rule-desc">Допускаются игроки с любым уровнем, с предварительным изучением статистики
-                    аккаунта</div>
-            </div>
-            <div class="rule">
-                <img src="img/2rule.png" alt="1rule">
-                <div class="rule-title">Уважительное отношение ко всем участникам турнира и администрации проекта</div>
-                <div class="rule-desc">Мат, оскорбления строго запрещены, наказываются баном</div>
-            </div>
-            <div class="rule">
-                <img src="img/3rule.png" alt="1rule">
-                <div class="rule-title">Запись игры</div>
-                <div class="rule-desc">Игроки играющие на PC должны вести запись своей игры, в случае победы быть
-                    готовыми её предоставить</div>
-            </div>
-            <div class="rule">
-                <img src="img/4rule.png" alt="1rule">
-                <div class="rule-title">Счет команды</div>
-                <div class="rule-desc">Один из игроков команды ,сразу после каждой законченной игры, должен скинуть боту
-                    в чат счёт очков команды</div>
-            </div>
-        </div>
-        <div class="team-block">
-            <img class="back-man" src="img/team-block-man.png" alt="team-block-man">
-            <div class="block-title">О КОМАНДЕ ОРГАНИЗАТОРОВ</div>
-            <div class="block-desc">Мы являемся организаторами любительских турниров для русскоязычных пользователей
-                Call of duty: Warzone.
-            </div>
-        </div>
+    <img class="smoke" src="img/smoke.png" alt="smoke">
+  </section>
+  <section class="second_block">
+    <div class="second_title_block">
+      <h2 class="second_title">ОПИСАНИЕ ТУРНИРОВ, КАК ОНИ ПРОВОДЯТСЯ</h2>
+      <p class="second_desc">Еженедельно проводим турниры с призовым фондом в&nbsp;режиме королевской битвы</p>
     </div>
-    <div class="forth_block">
-        <div class="forth_title_block">
-            <h2 class="forth_title">КАК УЧАСТВОВАТЬ?</h2>
-            <p class="forth_desc">Всю актуальную информацию по предстоящим турнирам вы можете посмотреть в нашем
-                дискорде, в разделе информация по турнирам</p>
-            <div class="button">
-                <img class="button_he" src="img/he.png" alt="HE">
-                <img class="button_bullet" src="img/bullet.png" alt="bullet">
-                <form action="https://discord.gg/V3HRUUsyYn" method="get" target="_blank">
-                    <button type="submit" class="title_button">УЧАСТВОВАТЬ!</button>
-                </form>
-            </div>
-        </div>
+    <div class="icon-list">
+      <div class="type-icon">
+        <img src="img/111icon.png" alt="soloicon">
+        <p>SOLO</p>
+      </div>
+      <div class="type-icon">
+        <img src="img/222icon.png" alt="soloicon">
+        <p>DUO</p>
+      </div>
+      <div class="type-icon">
+        <img src="img/333icon.png" alt="soloicon">
+        <p>TRIO</p>
+      </div>
+      <div class="type-icon">
+        <img src="img/444icon.png" alt="soloicon">
+        <p>SQUAD</p>
+      </div>
     </div>
-    <footer>
-        <img class="footer_logo" src="img/logo.png" alt="Логотип">
-        <div class="logos">
-            <a href="https://vk.com/codruwarzone" target="_blank" rel="noopener noreferrer">
-                <img src="img/logo_vk.png" alt="" srcset="">
-            </a>
-            <a href="https://instagram.com/codofru" target="_blank" rel="noopener noreferrer">
-                <img src="img/logo_inst.png" alt="" srcset="">
-            </a>
-            <a href="https://discord.gg/V3HRUUsyYn" target="_blank" rel="noopener noreferrer">
-                <img src="img/logo_disc.png" alt="" srcset="">
-            </a>
+  </section>
+  <section class="third_block">
+    <div class="third_title_block">
+      <h2 class="third_title">УСЛОВИЯ УЧАСТИЯ В ТУРНИРАХ</h2>
+    </div>
+    <div class="rules-list">
+      <div class="rule">
+        <img src="img/1rule.png" alt="1rule">
+        <div class="rule-title">Наличие статистики у аккаунта и&nbsp;не&nbsp;менее 100 lvl</div>
+        <div class="rule-desc">Допускаются игроки с любым уровнем, с&nbsp;предварительным изучением статистики
+          аккаунта
         </div>
-    </footer>
+      </div>
+      <div class="rule">
+        <img src="img/2rule.png" alt="1rule">
+        <div class="rule-title">Уважительное отношение ко всем участникам турнира и&nbsp;администрации проекта</div>
+        <div class="rule-desc">Мат, оскорбления строго запрещены, наказываются&nbsp;баном</div>
+      </div>
+      <div class="rule">
+        <img src="img/3rule.png" alt="1rule">
+        <div class="rule-title">Запись игры</div>
+        <div class="rule-desc">Игроки играющие на PC должны вести запись своей игры, в&nbsp;случае победы быть
+          готовыми её&nbsp;предоставить
+        </div>
+      </div>
+      <div class="rule">
+        <img src="img/4rule.png" alt="1rule">
+        <div class="rule-title">Счет команды</div>
+        <div class="rule-desc">Один из игроков команды ,сразу после каждой законченной игры, должен скинуть боту
+          в&nbsp;чатсчёт очков команды
+        </div>
+      </div>
+    </div>
+    <div class="team-block">
+      <img class="back-man" src="img/team-block-man.png" alt="team-block-man">
+      <div class="block-title">О КОМАНДЕ ОРГАНИЗАТОРОВ</div>
+      <div class="block-desc">Мы являемся организаторами любительских турниров для русскоязычных пользователей
+        Call of duty: Warzone.
+      </div>
+    </div>
+  </section>
+  <section class="forth_block">
+    <div class="forth_title_block">
+      <h2 class="forth_title">КАК УЧАСТВОВАТЬ?</h2>
+      <p class="forth_desc">Всю актуальную информацию по предстоящим турнирам вы можете посмотреть в нашем
+        дискорде, в&nbsp;разделе информация по турнирам</p>
+      <div class="button">
+        <img class="button_he" src="img/he.png" alt="HE">
+        <img class="button_bullet" src="img/bullet.png" alt="bullet">
+        <a href="https://discord.gg/V3HRUUsyYn" target="_blank" class="title_button" rel="noopener noreferrer">УЧАСТВОВАТЬ!</a>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <img class="footer_logo" src="img/logo.png" alt="Логотип">
+    <div class="logos">
+      <a href="https://vk.com/codruwarzone" target="_blank" rel="noopener noreferrer">
+        <img src="img/logo_vk.png" alt="" srcset="">
+      </a>
+      <a href="https://instagram.com/codofru" target="_blank" rel="noopener noreferrer">
+        <img src="img/logo_inst.png" alt="" srcset="">
+      </a>
+      <a href="https://discord.gg/V3HRUUsyYn" target="_blank" rel="noopener noreferrer">
+        <img src="img/logo_disc.png" alt="" srcset="">
+      </a>
+    </div>
+  </footer>
 </body>
 
 </html>
