--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="fonts/montserrat.css">
+    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
     <title>Турниры Call of Duty WARZONE</title>
     <meta name="description"
         content="Еженедельные турниры по игре Call of Duty WARZONE с призовым фондом в режиме королевской битвы!">
