--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
         (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date(); k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+            m[i] = m[i] || function () {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
         })
             (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
@@ -31,9 +34,9 @@
 </head>
 
 <body>
-    <div class="first_block">
+    <section class="first_block">
         <div class="logo">
-            <img src="img/logo.png" alt="Логотип">
+            <img src="img/logo.png" alt="Логотип Warzone">
         </div>
         <div class="title_block">
             <h1>ТУРНИРЫ ПО ИГРЕ COD WARZONE</h1>
@@ -41,17 +44,16 @@
             <div class="button">
                 <img class="button_he" src="img/he.png" alt="HE">
                 <img class="button_bullet" src="img/bullet.png" alt="bullet">
-                <form action="https://discord.gg/V3HRUUsyYn" method="get" target="_blank">
-                    <button type="submit" class="title_button">УЧАСТВОВАТЬ!</button>
-                </form>
+                <a href="https://discord.gg/V3HRUUsyYn" target="_blank" class="title_button"
+                    rel="noopener noreferrer">УЧАСТВОВАТЬ!</a>
             </div>
         </div>
         <img class="smoke" src="img/smoke.png" alt="smoke">
-    </div>
-    <div class="second_block">
+    </section>
+    <section class="second_block">
         <div class="second_title_block">
             <h2 class="second_title">ОПИСАНИЕ ТУРНИРОВ, КАК ОНИ ПРОВОДЯТСЯ</h2>
-            <p class="second_desc">Еженедельно проводим турниры с призовым фондом в режиме королевской битвы</p>
+            <p class="second_desc">Еженедельно проводим турниры с призовым фондом в&nbsp;режиме королевской битвы</p>
         </div>
         <div class="icon-list">
             <div class="type-icon">
@@ -71,34 +73,38 @@
                 <p>SQUAD</p>
             </div>
         </div>
-    </div>
-    <div class="third_block">
+    </section>
+    <section class="third_block">
         <div class="third_title_block">
             <h2 class="third_title">УСЛОВИЯ УЧАСТИЯ В ТУРНИРАХ</h2>
         </div>
         <div class="rules-list">
             <div class="rule">
                 <img src="img/1rule.png" alt="1rule">
-                <div class="rule-title">Наличие статистики у аккаунта и не менее 100 lvl</div>
-                <div class="rule-desc">Допускаются игроки с любым уровнем, с предварительным изучением статистики
-                    аккаунта</div>
+                <div class="rule-title">Наличие статистики у аккаунта и&nbsp;не&nbsp;менее 100 lvl</div>
+                <div class="rule-desc">Допускаются игроки с любым уровнем, с&nbsp;предварительным изучением статистики
+                    аккаунта
+                </div>
             </div>
             <div class="rule">
                 <img src="img/2rule.png" alt="1rule">
-                <div class="rule-title">Уважительное отношение ко всем участникам турнира и администрации проекта</div>
-                <div class="rule-desc">Мат, оскорбления строго запрещены, наказываются баном</div>
+                <div class="rule-title">Уважительное отношение ко всем участникам турнира и&nbsp;администрации проекта
+                </div>
+                <div class="rule-desc">Мат, оскорбления строго запрещены, наказываются&nbsp;баном</div>
             </div>
             <div class="rule">
                 <img src="img/3rule.png" alt="1rule">
                 <div class="rule-title">Запись игры</div>
-                <div class="rule-desc">Игроки играющие на PC должны вести запись своей игры, в случае победы быть
-                    готовыми её предоставить</div>
+                <div class="rule-desc">Игроки играющие на PC должны вести запись своей игры, в&nbsp;случае победы быть
+                    готовыми её&nbsp;предоставить
+                </div>
             </div>
             <div class="rule">
                 <img src="img/4rule.png" alt="1rule">
                 <div class="rule-title">Счет команды</div>
                 <div class="rule-desc">Один из игроков команды ,сразу после каждой законченной игры, должен скинуть боту
-                    в чат счёт очков команды</div>
+                    в&nbsp;чатсчёт очков команды
+                </div>
             </div>
         </div>
         <div class="team-block">
@@ -108,21 +114,20 @@
                 Call of duty: Warzone.
             </div>
         </div>
-    </div>
-    <div class="forth_block">
+    </section>
+    <section class="forth_block">
         <div class="forth_title_block">
             <h2 class="forth_title">КАК УЧАСТВОВАТЬ?</h2>
             <p class="forth_desc">Всю актуальную информацию по предстоящим турнирам вы можете посмотреть в нашем
-                дискорде, в разделе информация по турнирам</p>
+                дискорде, в&nbsp;разделе информация по турнирам</p>
             <div class="button">
                 <img class="button_he" src="img/he.png" alt="HE">
                 <img class="button_bullet" src="img/bullet.png" alt="bullet">
-                <form action="https://discord.gg/V3HRUUsyYn" method="get" target="_blank">
-                    <button type="submit" class="title_button">УЧАСТВОВАТЬ!</button>
-                </form>
+                <a href="https://discord.gg/V3HRUUsyYn" target="_blank" class="title_button"
+                    rel="noopener noreferrer">УЧАСТВОВАТЬ!</a>
             </div>
         </div>
-    </div>
+    </section>
     <footer>
         <img class="footer_logo" src="img/logo.png" alt="Логотип">
         <div class="logos">
